# fastapi-sqlalchemy-monitor

./: README.md  pyproject.toml
.github/actions/setup-uv/: action.yml
.github/workflows/: deploy.yml  test.yml
src/fastapi_sqlalchemy_monitor/: action.py  middleware.py  statistics.py
tests/: test_middleware_async.py  test_middleware_sync.py
