[project]
name = "fastapi-sqlalchemy-monitor"
dynamic = ["version"]
description = "Add your description here"
authors = [
    { name = "Iwan Bolzern" },
]
readme = "README.md"
urls = { Documentation = "https://github.com/Roche-REMCS/remcs-ai" }
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.115.6",
    "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]

[tool.uv]
package = true
publish-url = "https://code.roche.com/api/v4/projects/70075/packages/pypi"
python-downloads = "manual"
default-groups = ["dev", "doc", "notebook"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true

[tool.uv-dynamic-versioning.substitution]
folders = [
    { path = "src" }
]

[tool.ruff]
line-length = 120
include = ["src/**.py", "tests/**.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
]